.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gltxncntl__c.object
<CustomObject>
    <description>gltxncntl__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gltxncntl_tranno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_acctdate__c</fullName>
        <label>Transaction Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_begbaltxn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beginning Balance Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Transaction Linkages</relationshipLabel>
        <relationshipName>gltxncntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Transaction Linkages</relationshipLabel>
        <relationshipName>gltxncntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_onesided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Sided Adjustment Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_period__c</fullName>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxncntl_tranno__c</fullName>
        <label>Group Source Transaction Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Transaction Linkage</label>
    <listViews>
        <fullName>rstkf__RS_GL_Transaction_Linkages</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxncntl_cmpno__c</columns>
        <columns>rstkf__gltxncntl_acctdate__c</columns>
        <columns>rstkf__gltxncntl_period__c</columns>
        <columns>rstkf__gltxncntl_glyear__c</columns>
        <columns>rstkf__gltxncntl_begbaltxn__c</columns>
        <columns>rstkf__gltxncntl_onesided__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>GL Transaction Linkages</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Transaction Linkages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>